--- a/scss/forms/buttons.scss
+++ b/scss/forms/buttons.scss
@@ -1,4 +1,4 @@
-input[type="submit"], input[type="button"], button, .gl-button
+input[type="submit"], input[type="button"], button
 {
     background-color: $primary-ui-color;
     color: $primary-ui-alt-color;
@@ -52,24 +52,4 @@ input[type="submit"], input[type="button"], button, .gl-button
             color: $disabled-ui-alt-color;
         }
     }
-}
-
-.gl-button
-{
-    display: inline-block;
-    text-decoration: none;
-    white-space: nowrap;
-
-    &:hover
-    {
-        color: $primary-ui-alt-color;
-    }
-}
-
-.link-button
-{
-    white-space: nowrap;
-    line-height: 1.8rem;
-    padding: 0.6rem 1rem;
-    display: inline-block;
 }
