Add more base styles

--- a/scss/splendid.scss
+++ b/scss/splendid.scss
@@ -1,5 +1,4 @@
 @import "variables";
+@import "normalize";
 
-@import "forms/buttons";
-@import "forms/checkboxes";
-@import "forms/radiogroups";
+@import "forms/all";
