--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -9,3 +9,5 @@ $focus-color: $flat-orange-2;
 
 $disabled-ui-color: $flat-gray-4;
 $disabled-ui-alt-color: $flat-gray-2;
+
+$ui-outline-color: $flat-gray-3;
